nav: responsive across devices, fixed on scroll , toggle on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ Version: 01
   --clr-bg-500: #35323e;
   --clr-bg-600: #3b3054;
   --clr-bg-700: #232127;
+  --clr-bg-800: #fafafa;
   --clr-el-100: #f46262;
   --clr-el-200: #2acfcf;
   --clr-el-300: #6055a5;
@@ -249,13 +250,29 @@ main {
 */
 /*********** LOGO ************/
 /*********** NAVIGATION ************/
-.navbar {
+.nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: peachpuff;
 }
-
+.nav--fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: var(--clr-bg-800);
+  box-shadow: var(--shadow-100);
+  z-index: 100;
+}
+.nav-center {
+  position: relative;
+}
+@media (min-width: 56.25em) {
+  .nav-center {
+    display: flex;
+    align-items: center;
+  }
+}
 .nav-header {
   display: flex;
   align-items: center;
@@ -268,103 +285,87 @@ main {
 }
 .nav-toggle {
   border-color: transparent;
-  color: var(--clr-bg-500);
+  color: var(--clr-bg-200);
   background: transparent;
-  font-size: 2.4rem;
-  font-weight: var(fw-400);
+  font-size: 3rem;
   transition: var(--transition);
   cursor: pointer;
 }
 @media (min-width: 56.25em) {
   .nav-toggle {
-    display: none !important;
+    display: none;
   }
 }
-
-.nav .header__nav {
-  padding: 2rem 0;
-  color: var(--clr-txt-600);
-  font-size: 1.5rem;
-  font-weight: var(--fw-700);
-}
-.nav .header__nav--fixed {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: var(--clr-bg-200);
-  box-shadow: var(--shadow-100);
+.nav-links {
+  border-radius: var(--b-radius);
+  background-color: var(--clr-bg-600);
   z-index: 100;
-}
-.nav .header__nav--fixed .links a {
-  color: var(--clr-txt-300);
-}
-.nav .header__nav--fixed .links a:hover {
-  color: var(--clr-txt-400);
-}
-.nav .header__nav-mobile {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
+  height: 0;
+  overflow: hidden;
+  transition: all 0.2s ease;
 }
 @media (min-width: 56.25em) {
-  .nav .header__nav-mobile {
+  .nav-links {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 1.5rem;
+    width: 100%;
+    height: auto;
+    background-color: var(--clr-bg-100);
+  }
+}
+.nav-links .nav-link {
+  padding-bottom: 3rem;
+  color: var(--clr-txt-100);
+  font-size: 2rem;
+  font-weight: var(--fw-700);
+}
+@media (min-width: 56.25em) {
+  .nav-links .nav-link {
+    padding: 0 1rem;
+    color: var(--clr-txt-400);
+    font-size: 1.5rem;
+  }
+  .nav-links .nav-link:hover {
+    color: var(--clr-txt-500);
+  }
+}
+.nav-links > .nav-links--left, .nav-links > .nav-links--right {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+@media (min-width: 56.25em) {
+  .nav-links > .nav-links--left, .nav-links > .nav-links--right {
+    flex-direction: row;
+  }
+}
+.nav-links > .nav-links--left {
+  padding: 0 4rem;
+  padding-top: 4rem;
+}
+@media (min-width: 56.25em) {
+  .nav-links > .nav-links--left {
     padding: 0;
   }
 }
+.nav-links--right {
+  padding: 0 4rem;
+}
 @media (min-width: 56.25em) {
-  .nav .header__nav-center {
-    width: 100%;
-    max-width: var(--max-width);
-    margin: 0 auto;
-    display: flex;
+  .nav-links--right {
+    padding: 0;
   }
 }
-
-@media (min-width: 56.25em) {
-  .links {
-    display: flex;
-    align-items: center;
-  }
-}
-.links-container {
-  width: 100%;
-  height: 0;
-  overflow: hidden;
-  transition: var(--transition);
+.nav-links--right :first-child {
+  padding-top: 3rem;
+  border-top: 1px solid var(--clr-txt-400);
 }
 @media (min-width: 56.25em) {
-  .links-container {
-    height: auto !important;
-    margin-left: 4rem;
-  }
-}
-.links-cta {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-.links a {
-  display: block;
-  color: var(--clr-txt-400);
-  font-size: 2rem;
-  letter-spacing: var(--spacing);
-  text-transform: capitalize;
-  transition: var(--transition);
-}
-@media (min-width: 56.25em) {
-  .links a {
-    margin: 0 1rem;
-    font-size: 1.5rem;
-  }
-}
-.links a:hover {
-  color: var(--clr-txt-400);
-}
-@media (min-width: 56.25em) {
-  .links a:hover {
-    color: var(--clr-txt-400);
+  .nav-links--right :first-child {
+    padding: 0;
+    border: 0;
   }
 }
 
@@ -465,26 +466,30 @@ main {
   padding: 1.5em 2em;
 }
 .btn-primary {
-  padding: 0.6rem 1.6rem;
   border-radius: 2rem;
+  background-color: var(--clr-el-200);
+}
+.btn-primary:hover, .btn-primary:active {
+  opacity: 0.5;
 }
 .btn-secondary {
   padding: 1.5rem 3rem;
   border-radius: 0.5rem;
 }
+.btn--sm {
+  padding: 0.6rem 1.6rem;
+}
 .btn--animated {
   animation: bounce 2s ease-in-out infinite;
 }
 
-a.btn--white {
-  background-color: var(--clr-el-200);
-  color: var(--clr-txt-100);
+.btn {
   font-size: 1.5rem;
   font-weight: var(--fw-700);
 }
+
 a.btn--white:hover, a.btn--white:active {
-  background-color: var(--clr-bg-100);
-  color: var(--clr-bg-400);
+  opacity: 0.5;
   animation: none;
   transform: scale(0.95);
 }
@@ -575,8 +580,8 @@ a.btn--white:hover, a.btn--white:active {
   width: 100%;
   max-width: var(--max-width);
   margin: 0 auto;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .section-center {
